--- a/uma-portfolio.html
+++ b/uma-portfolio.html
@@ -11,7 +11,7 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="uma-portfolio.css"/>
+    <link rel="stylesheet" href="/css/uma-portfolio.css"/>
   </head>
   
   <body>
